# pictureBOM

./: .gitignore  LICENSE  README.md  app.py  build.py  cli.py  install.ps1  picturebom.py  pyproject.toml  requirements.txt
Example 3d models/Cage Stack Assembly/: CCM1-4ER_M-Solidworks.sldprt  CP33_M-Solidworks.SLDPRT  ER3-Solidworks.SLDPRT  cag subassm 1.SLDASM
Example 3d models/Cage Stack Assembly/BOM/: Cage2-sjm_2026-07-20_124705.xlsx
docs/samples/: Cage2-sjm_BomDom.html
scripts/: build_viewer.mjs  poc_incell_demo.py  preview_bomdom.py  smoke_bomdom.py  smoke_excel.py
src/picturebom/: __init__.py  app.py  bomdom.py  cli.py  core.py
src/picturebom/assets/bomdom/: viewer_template.html
src/picturebom/static/: app.js  style.css
src/picturebom/templates/: index.html
static/: app.js  style.css
templates/: index.html
web/: .gitignore  package-lock.json  package.json
web/bomdom/: bom.js  diag.js  exports.js  inline-draco.js  interactions.js  main.js  model.js  panel.js  payload.js  picking.js  scene.js  shell.html  state.js  style.css
