[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picturebom"
version = "0.3.0"
description = "Export isometric JPG images of every part in a SolidWorks assembly and generate an Excel visual BOM with embedded thumbnails."
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pywin32>=306",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "flask>=3.0",
]

[project.scripts]
picturebom = "picturebom.cli:main"
picturebom-gui = "picturebom.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/picturebom"]

